# exacqman

./: .gitignore  README.md  default.config  exacqman.py  exacqman_config.py  exacqman_naming.py  exacqvision.py  progress.py  pyproject.toml  sample.credentials
.cursor/: rules
exacqman-web/: README.md
exacqman-web/backend/: README.md  app.py  exacqman_web.py  requirements.txt  run_server.py
exacqman-web/backend/api/: models.py  routes.py
exacqman-web/backend/services/: config_service.py  exacqman_service.py  file_service.py  job_queue.py
exacqman-web/frontend/: index.html
exacqman-web/frontend/css/: styles.css
exacqman-web/frontend/js/: api.js  app.js
exacqman-web/frontend/js/components/: camera-selector.js  caption-input.js  datetime-picker.js  job-status.js  multiplier-selector.js  queue-poller.js
exacqman-web/frontend/js/utils/: confirm-modal.js  local-storage.js  state.js
src/exacqman/: __init__.py  __main__.py  cli.py  exacqman_config.py  exacqvision.py  inspect.py  paths.py
src/exacqman/data/: default.config
src/exacqman/web/: README.md  __init__.py  app.py  cli.py
src/exacqman/web/api/: models.py  routes.py
src/exacqman/web/frontend/: index.html
src/exacqman/web/frontend/css/: styles.css
src/exacqman/web/frontend/js/: api.js  app.js
src/exacqman/web/frontend/js/components/: bounded-text-input.js  camera-selector.js  datetime-picker.js  file-browser.js  job-status.js  multiplier-selector.js
src/exacqman/web/frontend/js/utils/: date-utils.js  local-storage.js  state.js  validation.js
src/exacqman/web/services/: config_service.py  exacqman_service.py  file_service.py  job_queue.py
