[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exacqman"
dynamic = ["version"]
description = "Extract, timelapse, and compress footage from ExacqVision servers, with a CLI and a web UI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Lucas" }]
keywords = ["exacqvision", "video", "timelapse", "surveillance", "ffmpeg"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]

# Single package: the CLI and the web UI ship together. The web deps are core
# (not an optional extra) -- both halves are small, and the web *service* is
# opt-in at runtime (`brew services start exacqman`), not at install time.
dependencies = [
    # --- media / processing ---
    "moviepy>=2.1,<3",          # 2.x API: write_videofile(..., logger=...), target_resolution
    "imageio-ffmpeg>=0.4",      # bundled ffmpeg/ffprobe binary (see cli._locate_ffmpeg)
    "opencv-python>=4.8",       # cv2: interactive ROI selection in `crop`
    "proglog>=0.1.10",          # MoviePy progress -> reporter adapter (progress.py)
    # --- core ---
    "requests>=2.31",           # ExacqVision HTTP API
    "python-dateutil>=2.8",     # flexible datetime parsing
    "tzdata>=2024.1",           # ZoneInfo data on platforms without a system tz db
    # --- web UI ---
    "fastapi>=0.110",
    "uvicorn>=0.23",
    "pydantic>=2",
    "python-multipart>=0.0.9",
    "mutagen>=1.47",            # read JSON metadata embedded in mp4 comment atoms
]

[project.scripts]
exacqman = "exacqman.cli:main"
exacqman-web = "exacqman.web.cli:main"

[tool.hatch.version]
path = "src/exacqman/__init__.py"

[tool.hatch.build.targets.wheel]
# Bundle the whole package, including non-.py trees: the web frontend (static
# assets served by FastAPI) and the data templates (default.config /
# sample.credentials, read via importlib.resources). Hatchling includes every
# file under the package by default, so an explicit force-include would only
# create duplicate wheel entries.
packages = ["src/exacqman"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
